# SFML-platformer

./: CMakeLists.txt  Features.txt  SFML-platformer.sln  TODO List.txt
Documentation/: Features.txt  TODO List.txt
SFML-platformer/: Game.cpp  Game.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  SFML-platformer.vcxproj  SFML-platformer.vcxproj.filters  Shape.hpp  main.cpp  stdafx.h
